--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "ioredis": "^5.5.0",
+    "ioredis": "^5.6.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.3",
+    "pg-format": "^1.0.4",
     "redis": "^4.7.0",
     "ws": "^8.18.1"
   },
