modified kafka, added routing testing

--- a/trading-service/docker-compose.yml
+++ b/trading-service/docker-compose.yml
@@ -14,3 +14,5 @@ services:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_MESSAGE_MAX_BYTES: 20000000
+      KAFKA_SOCKET_REQUEST_MAX_BYTES: 20000000
